# EmuDiscer

./: .clang-format  .gitignore  CMakeLists.txt  EmuDiscer.pro  EmuDiscer_en_US.ts  EmulatorBuiltInOptions.h  LMauricius.EmuDiscer.desktop  MiIni.h  README.md  UDisks2Watcher.cpp  UDisks2Watcher.h  Utilities.cpp  Utilities.h  appdialog.cpp  appdialog.h  appdialog.ui  emudiscer.cpp  emudiscer.h  emudiscer.ui  main.cpp  resources.qrc
AppimageDir/share/applications/: LMauricius.EmuDiscer.desktop
InstallerPackage/config/: config.xml
dBusExperiment/: dbusUdisks2XmlTypes.h  org.freedesktop.UDisks2.xml  org.freedesktop.UDisks2_blockDevice.xml  org.freedesktop.UDisks2_drive.xml  org.freedesktop.UDisks2_online.xml
